modif des constraints layout pour des linear layout

--- a/app/src/main/res/layout/activity_stat_et_poids.xml
+++ b/app/src/main/res/layout/activity_stat_et_poids.xml
@@ -5,14 +5,31 @@
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/stat_poids"
         tools:context=".statetpoid.StatEtPoids"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:gravity="center_horizontal">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+
+        <FrameLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/header"
+            tools:ignore="MissingConstraints" />
+
+        <ImageView
+            android:id="@+id/graphique"
+            android:layout_width="350dp"
+            android:layout_height="300dp"
+            android:src="@drawable/graphique"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="32dp" />
+
+        <LinearLayout
             android:id="@+id/manage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -58,13 +75,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:inputType="number"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <FrameLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/header"
-            tools:ignore="MissingConstraints" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -75,38 +86,28 @@
 
             <TextView
                 android:id="@+id/taille"
-                android:layout_width="408dp"
-                android:layout_height="25dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Taille" />
 
             <TextView
                 android:id="@+id/poids"
-                android:layout_width="408dp"
-                android:layout_height="25dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Poids" />
 
             <TextView
                 android:id="@+id/imc"
-                android:layout_width="408dp"
-                android:layout_height="25dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="IMC" />
 
             <TextView
                 android:id="@+id/poidsPerdu"
-                android:layout_width="408dp"
-                android:layout_height="25dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Poids Perdu" />
 
         </LinearLayout>
-
-        <ImageView
-            android:id="@+id/graphique"
-            android:layout_width="347dp"
-            android:layout_height="315dp"
-            android:src="@drawable/graphique"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="32dp" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </ScrollView>
