--- a/app/src/main/res/layout/activity_parametres.xml
+++ b/app/src/main/res/layout/activity_parametres.xml
@@ -36,10 +36,11 @@
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textParametre"
       tools:ignore="MissingConstraints" />
+
   <Switch
       android:id="@+id/ModeSombre"
-      android:layout_width="209dp"
-      android:layout_height="44dp"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
       android:layout_marginStart="100dp"
       android:layout_marginTop="28dp"
       android:switchMinWidth="200px"
