--- a/app/src/main/res/layout/activity_parametres_black.xml
+++ b/app/src/main/res/layout/activity_parametres_black.xml
@@ -43,8 +43,8 @@
 
     <Switch
         android:id="@+id/ModeSombre_black"
-        android:layout_width="209dp"
-        android:layout_height="44dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginTop="28dp"
         android:switchMinWidth="200px"
