--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<ScrollView xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -18,7 +18,8 @@
             <RelativeLayout android:id="@+id/relativeLayout1"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:layout_gravity="center">
+                android:layout_gravity="center"
+                tools:ignore="UselessParent">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -41,7 +42,9 @@
                     app:tint="#FFFFFF"
                     android:layout_centerVertical="true"
                     android:layout_alignParentEnd="true"
-                    android:layout_marginEnd="16dp"/>
+                    android:layout_marginEnd="16dp"
+                    android:contentDescription="@string/setting"
+                    tools:ignore="RelativeOverlap" />
 
 
 
@@ -75,10 +78,11 @@
         <ScrollView
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_marginStart="10dp">
+            android:layout_marginStart="10dp"
+            tools:ignore="NestedScrolling">
             <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center_horizontal"
                 android:isScrollContainer="true">
@@ -99,8 +103,7 @@
                         app:strokeWidth="2dp"
                         app:iconSize="50dp"
                         android:textSize="15sp"
-                        android:width="300dp"
-                        />
+                        android:width="300dp"/>
 
                     <Button
                         android:id="@+id/conseils"
@@ -114,8 +117,7 @@
                         app:iconSize="50dp"
                         android:textSize="20sp"
                         android:width="300dp"
-                        android:layout_marginStart="10dp"
-                        />
+                        android:layout_marginStart="10dp"/>
 
                 </LinearLayout>
                 <LinearLayout
@@ -133,8 +135,7 @@
                         app:strokeWidth="2dp"
                         app:iconSize="50dp"
                         android:textSize="20sp"
-                        android:width="300dp"
-                        />
+                        android:width="300dp"/>
 
                     <Button
                         android:id="@+id/statsEtPoids"
@@ -148,8 +149,7 @@
                         app:iconSize="50dp"
                         android:textSize="20sp"
                         android:width="300dp"
-                        android:layout_marginStart="10dp"
-                        />
+                        android:layout_marginStart="10dp"/>
 
                 </LinearLayout>
 
@@ -167,7 +167,6 @@
                     android:width="300dp"
                     />
             </LinearLayout>
-
         </ScrollView>
     </LinearLayout>
 </ScrollView>
