--- a/app/src/main/res/layout/activity_parametres.xml
+++ b/app/src/main/res/layout/activity_parametres.xml
@@ -20,8 +20,8 @@
       android:layout_marginStart="104dp"
       android:layout_marginTop="92dp"
       android:layout_weight="1"
-      android:text="Parametres"
-      android:textSize="100px"
+      android:text="@string/parametres"
+      android:textSize="100sp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       tools:ignore="MissingConstraints" />
@@ -32,7 +32,7 @@
       android:layout_height="36dp"
       android:layout_marginStart="72dp"
       android:layout_marginTop="80dp"
-      android:text="Modifier mon régime"
+      android:text="@string/modifier_mon_regime"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textParametre"
       tools:ignore="MissingConstraints" />
@@ -43,13 +43,14 @@
       android:layout_height="wrap_content"
       android:layout_marginStart="100dp"
       android:layout_marginTop="28dp"
-      android:switchMinWidth="200px"
-      android:switchPadding="20px"
-      android:text="Mode sombre"
-      android:textSize="50px"
+      android:switchMinWidth="200dp"
+      android:switchPadding="20dp"
+      android:text="@string/mode_sombre"
+      android:textSize="50sp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/buttonModifierMonRegime"
-      android:checked="false"/>
+      android:checked="false"
+      tools:ignore="UseSwitchCompatOrMaterialXml" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
