--- a/app/src/main/res/layout/activity_parametres_black.xml
+++ b/app/src/main/res/layout/activity_parametres_black.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ParametresActivity"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:background="#778899">
+    android:background="#778899"
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="fill_parent"
@@ -17,13 +18,13 @@
     <TextView
         android:id="@+id/textParametre"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="104dp"
         android:layout_marginTop="92dp"
         android:layout_weight="1"
-        android:text="Parametres"
+        android:text="@string/parametres"
         android:textColor="@color/white"
-        android:textSize="100px"
+        android:textSize="100sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
@@ -34,7 +35,7 @@
         android:layout_height="36dp"
         android:layout_marginStart="72dp"
         android:layout_marginTop="80dp"
-        android:text="Modifier mon régime"
+        android:text="@string/modifier_mon_regime"
         android:textColor="@color/black"
         android:backgroundTint="@color/white"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,14 +48,15 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
         android:layout_marginTop="28dp"
-        android:switchMinWidth="200px"
-        android:switchPadding="20px"
-        android:text="Mode sombre"
+        android:switchMinWidth="200dp"
+        android:switchPadding="20dp"
+        android:text="@string/mode_sombre"
         android:textColor="@color/white"
-        android:textSize="50px"
+        android:textSize="50sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonModifierMonRegime"
-        android:checked="true"/>
+        android:checked="true"
+        tools:ignore="UseSwitchCompatOrMaterialXml" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
