--- a/app/src/main/res/layout/activity_recherche_plat.xml
+++ b/app/src/main/res/layout/activity_recherche_plat.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-    tools:context=".recherchePlat.RecherchePlat">
+    android:orientation="vertical"
+    tools:ignore="ExtraText">
 
     <FrameLayout
         android:layout_width="fill_parent"
@@ -23,7 +23,7 @@
     <ListView
         android:id="@+id/mealList"
         android:layout_width="match_parent"
-        android:layout_height="416dp"
+        android:layout_height="0dp"
         android:layout_weight="1"
         android:choiceMode="singleChoice"
         android:divider="#ffa0ca12"
