--- a/app/src/main/res/layout/activity_stat_et_poids.xml
+++ b/app/src/main/res/layout/activity_stat_et_poids.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/stat_poids"
         tools:context=".statetpoid.StatEtPoids"
         android:orientation="vertical"
@@ -27,7 +27,8 @@
             android:src="@drawable/graphique"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout"
             tools:ignore="MissingConstraints"
-            tools:layout_editor_absoluteX="32dp" />
+            tools:layout_editor_absoluteX="32dp"
+            android:contentDescription="@string/graph" />
 
         <LinearLayout
             android:id="@+id/manage"
@@ -58,22 +59,24 @@
                 android:id="@+id/input_poids"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="entrer votre nouveau Poids"
+                android:hint="@string/entrer_votre_nouveau_poids"
                 android:minHeight="48dp"
                 android:textColorHint="#757575"
                 app:layout_constraintTop_toBottomOf="@+id/input_taille"
                 tools:layout_editor_absoluteX="0dp"
-                android:inputType="number" />
+                android:inputType="number"
+                android:autofillHints="" />
 
             <EditText
                 android:id="@+id/input_taille"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="entrer votre nouvelle taille"
+                android:hint="@string/entrer_votre_nouvelle_taille"
                 android:minHeight="48dp"
                 android:textColorHint="#757575"
                 app:layout_constraintTop_toTopOf="parent"
-                android:inputType="number"/>
+                android:inputType="number"
+                android:autofillHints="" />
 
         </LinearLayout>
 
@@ -88,25 +91,25 @@
                 android:id="@+id/taille"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Taille" />
+                android:text="@string/taille" />
 
             <TextView
                 android:id="@+id/poids"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Poids" />
+                android:text="@string/poids" />
 
             <TextView
                 android:id="@+id/imc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="IMC" />
+                android:text="@string/imc" />
 
             <TextView
                 android:id="@+id/poidsPerdu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Poids Perdu" />
+                android:text="@string/poids_perdu" />
 
         </LinearLayout>
     </LinearLayout>
