--- a/app/src/main/res/layout/activity_parametres.xml
+++ b/app/src/main/res/layout/activity_parametres.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ParametresActivity"
     android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:orientation="vertical">
 
   <FrameLayout
       android:layout_width="fill_parent"
@@ -16,9 +17,8 @@
   <TextView
       android:id="@+id/textParametre"
       android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+      android:layout_height="0dp"
       android:layout_marginStart="104dp"
-      android:layout_marginTop="92dp"
       android:layout_weight="1"
       android:text="@string/parametres"
       android:textSize="100sp"
@@ -31,7 +31,6 @@
       android:layout_width="263dp"
       android:layout_height="36dp"
       android:layout_marginStart="72dp"
-      android:layout_marginTop="80dp"
       android:text="@string/modifier_mon_regime"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textParametre"
@@ -53,4 +52,4 @@
       tools:ignore="UseSwitchCompatOrMaterialXml" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
