--- a/app/src/main/res/layout/activity_parametres.xml
+++ b/app/src/main/res/layout/activity_parametres.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ParametresActivity"
     android:layout_height="match_parent"
@@ -17,37 +16,27 @@
   <TextView
       android:id="@+id/textParametre"
       android:layout_width="wrap_content"
-      android:layout_height="0dp"
-      android:layout_marginStart="104dp"
-      android:layout_weight="1"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_horizontal"
       android:text="@string/parametres"
-      android:textSize="100sp"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      tools:ignore="MissingConstraints" />
+      android:textSize="50sp" />
 
   <Button
       android:id="@+id/buttonModifierMonRegime"
       android:layout_width="263dp"
       android:layout_height="36dp"
-      android:layout_marginStart="72dp"
       android:text="@string/modifier_mon_regime"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/textParametre"
       tools:ignore="MissingConstraints" />
 
   <Switch
       android:id="@+id/ModeSombre"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginStart="100dp"
       android:layout_marginTop="28dp"
-      android:switchMinWidth="200dp"
+      android:switchMinWidth="100dp"
       android:switchPadding="20dp"
       android:text="@string/mode_sombre"
-      android:textSize="50sp"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/buttonModifierMonRegime"
+      android:textSize="30sp"
       android:checked="false"
       tools:ignore="UseSwitchCompatOrMaterialXml" />
 
