--- a/app/src/main/res/layout/activity_parametres_black.xml
+++ b/app/src/main/res/layout/activity_parametres_black.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ParametresActivity"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
     android:background="#778899"
+    android:gravity="center_horizontal"
     android:orientation="vertical">
 
     <FrameLayout
@@ -28,7 +28,7 @@
         android:id="@+id/buttonModifierMonRegime"
         android:layout_width="263dp"
         android:layout_height="36dp"
-        android:text="@string/modifier_mon_regime"
+        android:text="Organiser mon regime"
         android:textColor="@color/black"
         android:backgroundTint="@color/white"/>
 
