--- a/app/src/main/res/layout/modifierregime.xml
+++ b/app/src/main/res/layout/modifierregime.xml
@@ -33,7 +33,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginTop="88dp"
         android:layout_weight="1"
-        android:text="Modifier Mon régime"
+        android:text="Organiser mon régime"
         android:textSize="100px"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
